testsuite/tests/rename/should_fail/T6148b.hs
module T6148b where

b = (,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,)
